# backend/src/modules/organizations/organizations.controller.ts
@@ -1,20 +1,21 @@
 
-import { Controller, Patch, Param, Body, UseGuards, ParseIntPipe } from '@nestjs/common';
+import { Controller, Patch, Param, Body, UseGuards, ParseIntPipe, Get } from '@nestjs/common';
 import { OrganizationsService } from './organizations.service';
 import { UpdateOrganizationDto } from './dto/update-organization.dto';
 import { JwtAuthGuard } from '../auth/jwt.guard';
 import { GetUser } from '../auth/get-user.decorator';
-
-type AuthenticatedUser = {
-    userId: number;
-    organizationId: number;
-    role: 'user' | 'company-admin' | 'super-admin';
-}
+import { AuthenticatedUser } from '../users/users.service';
 
 @UseGuards(JwtAuthGuard)
 @Controller('organizations')
 export class OrganizationsController {
   constructor(private readonly organizationsService: OrganizationsService) {}
+
+  @Get()
+  findAll(@GetUser() user: AuthenticatedUser) {
+    // The service will ensure only a super-admin can access this
+    return this.organizationsService.findAll(user);
+  }
 
   @Patch(':id')
   update(
